# code-Ai-trade

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: quality.yml
backend/: server.py
backend/alembic/: env.py  script.py.mako
backend/app/: main.py
config/: local.env.example
docker/: backend.Dockerfile  frontend.Dockerfile
docs/: data-provider-roadmap.md  implementation-plan.md
docs/architecture/: decisions.md
docs/deployment/: render.md
docs/operations/: production-hardening.md
frontend/: next-env.d.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: backtest-workspace.tsx  daily-research-report.tsx  live-market-snapshots.tsx  options-portfolio-workspace.tsx  options-workspace.tsx  page-panel.tsx  platform-readiness.tsx  portfolio-workspace.tsx  research.tsx  scanner-workspace.tsx  signals-workspace.tsx  status-grid.tsx  stock-workspace.tsx  strategy-lab.tsx  terminal-nav.tsx  terminal-shell.tsx  trade-history-workspace.tsx  watchlist-grid.tsx
frontend/lib/: api.ts  generated-market-snapshot.ts  platform-data.ts
frontend/public/: index.html  manifest.json
memory/: test_credentials.md
scripts/: check-backend.sh  generate_market_snapshot.py  tick_options_ledger.py
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json
tests/analytics/: test_analytics_service.py
tests/api/: test_capabilities_and_analytics.py  test_health.py  test_market_data_endpoints.py  test_market_data_snapshots.py  (+7 more)
(+106 files in other folders)
