[project]
name = "koc3-quant-platform"
version = "0.1.0"
description = "Institutional-grade AI quantitative research and trading platform."
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "KOC3 Engineering" }]
dependencies = [
    "alembic==1.13.2",
    "celery==5.4.0",
    "fastapi==0.115.6",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "psycopg[binary]==3.2.3",
    "redis==5.2.1",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
    "httpx==0.28.1",
    "mypy==1.14.1",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "ruff==0.8.6",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["legacy", "frontend"]
ignore_missing_imports = true
disable_error_code = ["misc", "untyped-decorator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers --strict-config"
